# MyFTP

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  a.out  dumb  index.html  misc  myftp  xaa
.github/matchers/: banana-style-error-checker.json
.github/workflows/: ci.yml
coverage/: index.html
coverage/__w/MyFTP/MyFTP/tests/: hello_test.cpp.html
src/: CMakeLists.txt
src/DesignPattern/: CMakeLists.txt  FactoryTemplate.hpp
src/Exceptions/: CMakeLists.txt  OptionException.cpp  OptionException.hpp
src/Network/: Acceptor.cpp  CMakeLists.txt  ConnectedSocket.cpp
src/Network/include/: Acceptor.hpp  ErrorCode.hpp  ListeningSocket.hpp
src/OptionHandlers/: AddressOptionHandler.cpp  AddressOptionHandler.hpp  CMakeLists.txt  DirectoryOptionHandler.cpp  DirectoryOptionHandler.hpp  HelpOptionHandler.cpp  HelpOptionHandler.hpp  PortOptionHandler.cpp  PortOptionHandler.hpp
src/Server/: Acceptor.cpp  Acceptor.hpp  CMakeLists.txt  ClientSession.cpp  ClientSession.hpp  ConnectedSocket.cpp  ConnectedSocket.hpp  Endpoint.cpp  Endpoint.hpp  ErrorCode.cpp  ErrorCode.hpp  HelpOptionHandler.cpp  HelpOptionHandler.hpp  IoContext.cpp  IoContext.hpp  LinteningSocket.cpp  ListeningSocket.hpp  Server.cpp  Server.hpp  Socket.cpp  Socket.hpp
src/Server/include/: ClientSession.hpp  Server.hpp
src/ServerEntryPoint/: CMakeLists.txt  ServerEntryPoint.cpp  ServerEntryPoint.hpp  main.cpp
src/ServerEntryPoint/OptionHandlers/: CMakeLists.txt  DirectoryOptionHandler.cpp  HelpOptionHandler.cpp  PortOptionHandler.cpp
src/ServerEntryPoint/OptionHandlers/include/: DirectoryOptionHandler.hpp  HelpOptionHandler.hpp  PortOptionHandler.hpp
src/ServerEntryPoint/include/: ServerEntryPoint.hpp
src/Utils/: CMakeLists.txt  IOptionHandler.hpp  Logger.cpp  Logger.hpp  OptionException.cpp  Options.cpp  Options.hpp  StringUtils.cpp  StringUtils.hpp  constants.hpp
src/Utils/include/: Logger.hpp
src/ftp/: CMakeLists.txt  main.c  main.cpp
tests/: CMakeLists.txt  hello_test.cpp
